# siem-rust

./: README.md
siem-forwarder/: Cargo.toml
siem-forwarder/src/: main.rs
siem-forwarder/src/platform/: linux.rs  macos.rs  types.rs  windows.rs
siem-indexer/: Cargo.toml
siem-indexer/src/: main.rs
siem-parser/: Cargo.toml
