[package]
name = "siem-forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
bincode = "1.3.3"
serde = { version = "1.0.188", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_EventLog", "Win32_System_SystemServices"] }

