[package]
name = "siem-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
indicatif = "0.17.8"
sysinfo = "0.32.0"
windows = {version = "0.58.0", features = ["Win32_Foundation", "Win32_System_EventLog", "Win32_System_SystemServices"]}
rusqlite = { version = "0.32.0", features = ["bundled"] }
tokio = { version = "1.41.0", features = ["full"] }
serde = {version = "1.0.213", features = ["derive"]}
bincode = "1.3"
